--- a/snippets/landing-page-integration-steps.mdx
+++ b/snippets/landing-page-integration-steps.mdx
@@ -1,6 +1,6 @@
 <Steps>
   <Step title="Add a new page on-site">
-    Create a new page on your site for each campaign type you want to promote. 
+    Create a new page on your site for each campaign type you want to promote.
     Most brands reference the campaign type within the page url (i.e `company.com/student-discounts`) and add a simple title/description highlighting their offers.
   </Step>
   <Step title="Add iFrame to body">
@@ -9,14 +9,14 @@
     </Tip>
 
     Once you have your basic page setup you can paste in the following iFrame within the `<body>` tag. This determines where gocertify reward flow will appear.
-    
+
     ```html iFrame
-      <gocertify-iframe data-src="/at/exampleCompany/campaign"></gocertify-iframe>
+      <gocertify-iframe source="example-campaign"></gocertify-iframe>
     ```
     <Info>
-      Remember to replace `exampleCompany/campaign` with your actual company name and campaign name.
+      Remember to replace `example-company` with your actual company name and campaign name (e.g. "students").
     </Info>
-    
+
   </Step>
 
 </Steps>
