--- a/snippets/offerHub-integration-steps.mdx
+++ b/snippets/offerHub-integration-steps.mdx
@@ -8,13 +8,10 @@
     </Tip>
 
     Once you have your basic page setup you can paste in the following iFrame within the `<body>` tag. This determines where gocertify OfferHub will appear.
-    
+
     ```html iFrame
-      <gocertify-iframe data-src="/at/exampleCompany/hub"></gocertify-iframe>
+      <gocertify-hub></gocertify-hub>
     ```
-    <Info>
-      Remember to replace `exampleCompany` with your actual company name.
-    </Info>
   </Step>
 
 </Steps>
