--- a/documentationSections/0_gettingStarted/customiseBranding.mdx
+++ b/documentationSections/0_gettingStarted/customiseBranding.mdx
@@ -22,7 +22,7 @@ create will be applied to all of your reward flows, so it's a great way to build
     alt="Example Customisation Screens"
     />
 </Frame>
-## 🎨 Customise your visuals
+## Customise your visuals
 
 #### Favicon, Logo and Banner Image
 The brand logo and banner image is shown on the key screens throughout the reward flow and the favicon is shown on any 
