--- a/documentationSections/0_gettingStarted/landingPages.mdx
+++ b/documentationSections/0_gettingStarted/landingPages.mdx
@@ -14,7 +14,7 @@ Landing pages are a powerful tool for converting key communities and boosting yo
   * **Create a landing page** for each of your high value campaigns (i.e. 20% off for Students) 
   * **Create multi-offers page** to showcase all your discounts in one place. 
 
-## 🔈 Create Campaign landing pages
+## Create Campaign landing pages
 <Tip>
   Best practice is to create dedicated landing pages for your high-priority communities, like Key Workers and Students.
 
@@ -46,7 +46,7 @@ Adding a campaign specific landing page is simple, we recommend getting started 
  
 
 
-## 💝 Create multi-offers page
+## Create multi-offers page
 
 OfferHub is a centralised location for all your discounts and offers. It's a great way to showcase all your discounts in one place and drive traffic to your site.
 
