--- a/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
+++ b/documentationSections/1_buildRewardFlows/closedUserGroups.mdx
@@ -6,7 +6,7 @@ icon: 'person'
 
 gocertify enables you to target your campaigns to any combination of our 40+ supported closed groups. We handle the verification process for you end-to-end. 
 
-## ⚡ How it works
+## How it works
 gocertify's AI powered verification process verifies shoppers quickly, accurately and securely by automatically analysing "verification proof" in the form of:
 
 <AccordionGroup>
@@ -40,7 +40,7 @@ gocertify's AI powered verification process verifies shoppers quickly, accuratel
 
 
 
-## 👥 Supported Groups
+## Supported Groups
 
 gocertify supports 40+ closed user groups out of the box and can support additional groups on request.
 
