--- a/documentationSections/1_buildRewardFlows/overview.mdx
+++ b/documentationSections/1_buildRewardFlows/overview.mdx
@@ -10,6 +10,9 @@ Campaigns form the fundamental building blocks of reward flows. When you create 
 * [Gate the offer](/documentationSections/1_buildRewardFlows/closedUserGroups) to a specific audience (or make it available to all shoppers)
 * [Enable datacapture](/documentationSections/2_captureData/overview) to collect information from shoppers (e.g email address)
 
+You can also group campaigns, enabling you to have one parent campaign (i.e. <a href="https://secure.gocertify.me/at/gosnow/key-worker">Key Worker Discounts</a>) and then have child campaigns (i.e. <a href="https://secure.gocertify.me/at/gosnow/key-worker/healthcare">Healthcare Workers</a> and <a href="https://secure.gocertify.me/at/gosnow/key-worker/teacher">Teachers</a>).
+
+
 
 <Frame caption="Three example campaigns being used by brands like Currys.">
   <img
