--- a/documentationSections/2_captureData/customFields.mdx
+++ b/documentationSections/2_captureData/customFields.mdx
@@ -3,3 +3,21 @@ title: Collect Custom Fields
 description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'person-circle-question'
 ---
+
+By default, enabling datacapture will collect shopper emails, enabling you to run newsletter campaigns. However, with custom fields you can collect
+any additional data you require to personalise the shopping experience and retarget shoppers. To standardise the data you can collect information using
+radio buttons, dropdowns, date pickers or free text input.
+
+<Frame caption = "Kwik Fit use datacapture to personalise the shopping experience and direct shoppers to their local branch">
+<img
+    className="block dark:hidden"
+    src="/images/kwikFit.png"
+    alt="Example Datacapture for Kwik Fit"
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/kwikFit.png"
+    alt="Example Datacapture for Kwik Fit"
+/>
+</Frame>
+
