--- a/documentationSections/2_captureData/dataCapture.mdx
+++ b/documentationSections/2_captureData/dataCapture.mdx
@@ -4,4 +4,9 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'wpforms'
 ---
 
-Datacapture can be enabled on 
+Datacapture is enabled at the brand level with the ability to apply datacpature to all campaigns or just closed group/open campaigns.
+Once switched on shoppers will experience an additional step in the reward flow where they can opt-in to share their data in return for rewards. This screen will
+appear after login but before verification.
+
+(show flow of datacapture)
+
