--- a/documentationSections/3_promoteOffers/linking-to-offers.mdx
+++ b/documentationSections/3_promoteOffers/linking-to-offers.mdx
@@ -4,34 +4,17 @@ description: 'Display inline code and code blocks'
 icon: 'link'
 ---
 
-## Basic
-
-### Inline Code
-
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
-
+<CodeGroup>
+```html Link to parent campaign
+<a href="https://secure.gocertify.me/at/gosnow/key-worker">Key Worker Discounts</a>
 ```
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
+```html Link to child campaign
+<a href="https://secure.gocertify.me/at/gosnow/key-worker/healthcare">Key Worker Discounts</a>
 ```
-
-### Code Block
-
-Use [fenced code blocks](https://www.markdownguide.org/extended-syntax/#fenced-code-blocks) by enclosing code in three backticks and follow the leading ticks with the programming language of your snippet to get syntax highlighting. Optionally, you can also write the name of your code after the programming language.
-
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
+```html Link to Brand page
+<a href="https://secure.gocertify.me/at/gosnow">Key Worker Discounts</a>
 ```
-
-````md
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
+```html Link to OfferHub
+<a href="https://secure.gocertify.me/at/gosnow/hub">Key Worker Discounts</a>
 ```
-````
+</CodeGroup>
