--- a/documentationSections/3_promoteOffers/osmVisibility.mdx
+++ b/documentationSections/3_promoteOffers/osmVisibility.mdx
@@ -3,3 +3,7 @@ title: Visibility toolkit
 description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'fa-fw'
 ---
+
+
+my_oms_test=true and OSM rule so you can show it by adding that path (or staging etc). 
+Everything after the domain (i.e. starts after https://secure.gocertify.me/) is used to determine the visibility of the offer.
