--- a/snippets/landing-page-integration-steps.mdx
+++ b/snippets/landing-page-integration-steps.mdx
@@ -14,7 +14,7 @@
       <gocertify-iframe source="example-campaign"></gocertify-iframe>
     ```
     <Info>
-      Remember to replace `example-company` with your actual company name and campaign name (e.g. "students").
+      Remember to replace `example-campaign` with your actual campaign name (e.g. "students").
     </Info>
 
   </Step>
