--- a/documentationSections/0_gettingStarted/overview.mdx
+++ b/documentationSections/0_gettingStarted/overview.mdx
@@ -13,7 +13,7 @@ description: 'Convert shoppers with targeted, gated rewards.'
   src="/images/rewardFlow.png"
   alt="Hero Dark"
 />
-## 🚀 Why use gocertify?
+## Why use gocertify?
 Every year brands spend $1 trn attracting shoppers on-site - but 97\% of shoppers leave without making a purchase and \<4\% share the data needed for retargeting.
 
 Today over 450 brands, from Puma to Samsung, use gocertify to convert these shoppers using targeted, gated rewards. By deploying
@@ -23,7 +23,7 @@ these rewards at scale you can boost conversion and retention while giving back 
 <img src="/images/brandLogos.png" alt="Brand Logos" />
 </Frame>
 
-## 👣 Introducing Reward Flows
+## Introducing Reward Flows
 Think of a gocertify reward flow as the journey that your shoppers go on, from the moment they first learn about a reward on-site to the moment they redeem it.  
 
 With gocertify you can create as many of these custom reward flows as you want and tailor them to your brand and your audience. For example, creating a campaign around [unique rewards](/documentationSections/1_buildRewardFlows/chooseReward) (10% off or Free delivery), gating offers to specific [target
