updated popup script

--- a/documentationSections/3_promoteOffers/popups.mdx
+++ b/documentationSections/3_promoteOffers/popups.mdx
@@ -3,3 +3,11 @@ title: Popups
 description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'window-restore'
 ---
+
+
+gocertify.popup("student-youth")
+gocertify.popup("student-youth?clickref=...") lets you redirect to a specific page (false stops the main link working )
+
+
+
+<a href="#" onclick="gocertify.popup('/at/tower-london/student-grad'); return false;">click here</a>
