Updated page paths

--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -84,6 +84,9 @@ Tag managers let you can easily add the gocertify script site-wide without needi
       </Step>
     </Steps>
   </Accordion>
+  <Accordion icon="shopify" title="Shopify">
+    Coming soon
+  </Accordion>
 </AccordionGroup>
 
 ### Option 2: Manually add script
