--- a/section/buildRewardFlows/giftCards.mdx
+++ b/section/buildRewardFlows/giftCards.mdx
@@ -12,6 +12,7 @@ gocertify will issue a gift card via SMS automatically once the transaction is a
     The easiest way to issue gift cards is to provide the gocertify client success team with a CSV of unique gift card URLs. We will provide each shopper with this URL via SMS when qualifying transactions are approved by your network.
 </Accordion>
 
+<Frame caption="Shopper journey for the gift card flow">
 <Steps>
     <Step title="Shopper verifies">
         Shopper verifies their status using gocertify.
@@ -27,3 +28,4 @@ gocertify will issue a gift card via SMS automatically once the transaction is a
     </Step>
 
 </Steps>
+</Frame>
