--- a/section/promoteOffers/linking-to-offers.mdx
+++ b/section/promoteOffers/linking-to-offers.mdx
@@ -18,3 +18,39 @@ icon: 'link'
 <a href="https://secure.gocertify.me/at/gosnow/hub">Key Worker Discounts</a>
 ```
 </CodeGroup>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<CardGroup cols={2}>
+  <Card title="In-line" href="/section/promoteOffers/on-site-placements" img="/images/OSM-inline.png">
+    Display rewards directly on product/checkout pages, maximising conversion of high intent shoppers.
+  </Card>
+  <Card title="Sticky Bar" href="/section/promoteOffers/on-site-placements" img="/images/OSM-stickyBar.png">
+    Display rewards from a prominent sticky bar at the top or bottom of your site. Highly visible and no-dev installation.
+  </Card>
+  <Card title="Floating Button" href="/section/promoteOffers/on-site-placements" img="/images/OSM-floating.png">
+    Display a hovering trigger that floats above the page content. Highly visible and no-dev installation.
+  </Card>
+  <Card title="Hero Sections" href="/section/promoteOffers/heroSections" img="/images/OSM-PromotionalSection.png">
+     Deploy highly visible promotional/hero sections that drive conversion
+  </Card>
+  <Card title="Link to offers" href="/documentationSections/2_captureData/ometria" img="/images/OSM-footerLink.png">
+    Link to hosted rewards pages from high traffic areas of your site, i.e. the footer or menu items.
+  </Card>
+  <Card title="Popups" href="/documentationSections/2_captureData/bloomreach" img="https://mma.prnewswire.com/media/327274/bloomreach_logo.jpg?p=facebook">
+     Deploy a CTA that initiates the verification flow from high traffic areas of your site.
+  </Card>
+  <Card title="Instore" href="/documentationSections/2_captureData/bloomreach" img="https://mma.prnewswire.com/media/327274/bloomreach_logo.jpg?p=facebook">
+     Deliver omnichannel offers to in-store shoppers.
+  </Card>
+</CardGroup>
