Added visibility rules and dynamic text

--- a/section/gettingStarted/customiseBranding.mdx
+++ b/section/gettingStarted/customiseBranding.mdx
@@ -15,11 +15,13 @@ create will be applied to all of your reward flows, so it's a great way to build
     className="block dark:hidden"
     src="/images/customisationExample.png"
     alt="Example Customisation Screens"
+    style={{ borderRadius: '0.5rem' }}
     />
     <img
     className="hidden dark:block"
     src="/images/customisationExample.png"
     alt="Example Customisation Screens"
+    style={{ borderRadius: '0.5rem' }}
     />
 </Frame>
 ## Customise your visuals
