--- a/section/promoteOffers/on-site-placements.mdx
+++ b/section/promoteOffers/on-site-placements.mdx
@@ -1,10 +1,16 @@
 ---
 title: 'On Site Messaging'
-description: 'Text, title, and styling in standard markdown'
+description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'square-web-awesome-stroke'
 ---
 
-<CardGroup cols={2}>
+On-site messaging (OSM) is a powerful way to drive conversions by surfacing offers directly on product/checkout pages, maximising conversion of high intent shoppers.
+No additional development work is needed to add OSM to your site as long as the [head script](section/gettingStarted/integrateOnSite) has been installed.
+
+## Types of on-site messaging
+Out of the box, gocertify supports three main types of on-site messaging, but with heavy customisation available you can build a tailored placement that meets your needs.
+
+<CardGroup cols={3}>
   <Card title="In-line" href="/section/promoteOffers/on-site-placements" img="/images/OSM-inline.png">
     Display rewards directly on product/checkout pages, maximising conversion of high intent shoppers.
   </Card>
@@ -16,7 +22,21 @@ icon: 'square-web-awesome-stroke'
   </Card>
 </CardGroup>
 
+## Managing on-site messaging
 
+You have full control of all your on-site messages via the [gocertify dashboard](https://secure.gocertify.me/dashboard), including creating new placements, editing content and setting visibility rules.
 
+<Frame>
+<img
+    className="block dark:hidden"
+    src="/images/Dashboard-OSM.png"
+    alt="Client Dashboard Screenshot"
+    />
+    <img
+    className="hidden dark:block"
+    src="/images/Dashboard-OSM.png"
+    alt="Client Dashboard Screenshot"
+/>
+</Frame>
 
 
