--- a/section/promoteOffers/overview.mdx
+++ b/section/promoteOffers/overview.mdx
@@ -4,9 +4,9 @@ description: 'Start building loyal communities with targeted, gated offers.'
 ---
 
 gocertify's promotion engine provides the tools needed to surface the right offer at the right time to the right shopper:
-- **[On-site](/section/promoteOffers/on-site-placements) and [In-Store](/section/promoteOffers/inStore):** Deliver omnichannel performance with on-site and in-store rewards
-- **[High performing CTA's](/section/promoteOffers/on-site-placements):** Drive conversions with prominent on-brand, on-site messaging
-- **[Dynamic Text](/section/promoteOffers/dynamicText):** Highlight exact savings amounts by passing through product data
+- **[On-site](/section/promoteOffers/on-site-placements) and [In-Store](/section/promoteOffers/inStore):** Deliver omnichannel performance at every shopper touchpoint
+- **[High performing Placements](/section/promoteOffers/on-site-placements):** Drive conversions with prominent on-site messaging
+- **[Dynamic CTAs](/section/promoteOffers/dynamicText):** Highlight exact savings amounts by passing through product data
 - **[Visibility Toolkit](/section/promoteOffers/osmVisibility):** Control exactly when and where offers are surfaced
 
 
@@ -21,19 +21,19 @@ gocertify's promotion engine provides the tools needed to surface the right offe
   <Card title="Floating Button" href="/section/promoteOffers/on-site-placements" img="/images/OSM-floating.png">
     Display a hovering trigger that floats above the page content. Highly visible and no-dev installation.
   </Card>
-  <Card title="Hero Sections" href="/section/promoteOffers/heroSections" img="/images/OSM-PromotionalSection.png">
+  <Card title="Hero Section" href="/section/promoteOffers/heroSections" img="/images/OSM-PromotionalSection.png">
      Deploy highly visible promotional/hero sections that drive conversion
   </Card>
-  <Card title="Link to offers" href="/section/promoteOffers/on-site-placements" img="/images/OSM-footerLink.png">
+  <Card title="Link to offer" href="/section/promoteOffers/linking-to-offers" img="/images/OSM-footerLink.png">
     Link to hosted rewards pages from high traffic areas of your site, i.e. the footer or menu items.
   </Card>
-  <Card title="OfferHub" href="/section/promoteOffers/on-site-placements" img="/images/exampleCampaigns.png">
+  <Card title="OfferHub" href="/section/promoteOffers/offerHub" img="/images/exampleCampaigns.png">
     Display all your offers in one central hub.
   </Card>
-  <Card title="Popups" href="/section/promoteOffers/on-site-placements" img="/images/OSM-popUp.png">
+  <Card title="Popup" href="/section/promoteOffers/on-site-placements" img="/images/OSM-popUp.png">
      Deploy a CTA that initiates the verification flow from high traffic areas of your site.
   </Card>
-  <Card title="Landing Pages" href="/section/promoteOffers/on-site-placements" img="/images/landingPage.png">
+  <Card title="Landing Page" href="/section/promoteOffers/landingPages" img="/images/landingPage.png">
     Create custom landing pages to drive conversions.
   </Card>
 </CardGroup>
