--- a/section/gettingStarted/overview.mdx
+++ b/section/gettingStarted/overview.mdx
@@ -7,11 +7,13 @@ description: 'Convert shoppers with targeted, gated rewards.'
   className="block dark:hidden"
   src="/images/rewardFlow.png"
   alt="Hero Light"
+  style={{ borderRadius: '0.5rem' }}
 />
 <img
   className="hidden dark:block"
   src="/images/rewardFlow.png"
   alt="Hero Dark"
+  style={{ borderRadius: '0.5rem' }}
 />
 ## Why use gocertify?
 Every year brands spend $1 trn attracting shoppers on-site - but 97\% of shoppers leave without making a purchase and \<4\% share the data needed for retargeting.
